fix some layout problems, change colours, slightly update README

--- a/schema-builder/UI/src/material2-app-theme.scss
+++ b/schema-builder/UI/src/material2-app-theme.scss
@@ -4,9 +4,11 @@
 
 @include md-core();
 
-$primary: md-palette($md-deep-purple);
-$accent:  md-palette($md-amber, A200, A100, A400);
+$primary: md-palette($md-cyan);
+$accent:  md-palette($md-lime, A200, A100, A400);
 $warn:    md-palette($md-red);
+
+$header:  md-palette($md-grey);
 
 $theme: md-light-theme($primary, $accent);
 
@@ -39,4 +41,12 @@ $theme: md-light-theme($primary, $accent);
 md-ink-bar {
   background-color: md-color($accent, A400);
   height: 4px !important;
+}
+
+.card-header {
+  background-color: md-color($primary, 800);
+}
+
+.content-card-header {
+  background-color: md-color($primary, 800);
 }
